--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ flutter:
   # adding or updating assets for this project.
   plugin:
     platforms:
+      android:
+        package: ai.spatialwalk.sp_character_plugin
+        pluginClass: SpCharacterPlugin
       ios:
         pluginClass: SpCharacterPlugin
 
