--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,6 +18,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        mavenLocal()
     }
 }
 
@@ -49,7 +50,7 @@ android {
 
     dependencies {
         // SPAvatarKit SDK
-        implementation("ai.spatialwalk:avatarkit:0.0.1")
+        implementation("ai.spatialwalk:avatarkit:0.0.3")
         
         // Coroutines
         implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
